# rcmbot

./: .gitignore  README  TODO  configure.ac  configure.in
src/: Makefile.am  includes.h  irc.c  irc.h  rcmbot.c  settings.c  settings.h  xmem.c  xmem.h  xml.c  xml.h
